src/components/styles/About.scss
@import "../../styles/variables.scss";
.about {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 30px;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  z-index: 1000;
  .about__info {
    width: 100%;
    h3 {
      color: $dark-text;
      text-align: left;
      font-size: $subtitle-size;
      font-weight: 500;
      padding-bottom: 20px;
    }
    h1 {
      font-weight: bold;
      font-size: $title-size;
      line-height: 104.9%;
      color: $dark-text;
      text-align: left;
      span {
        color: $negative-color;
      }
    }
    h2 {
      font-size: $subtitle-size;
      line-height: 42px;
      text-align: left;
      font-weight: 500;
      color: $dark-text;
    }
  }
  .about__features {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}

@media screen and (min-width: 700px) {
  .about {
    padding: 20px 60px;
    .about__info {
      max-width: 1200px;
    }
    .about__features {
      max-width: 1200px;
      width: 100%;
      display: flex;
      flex-direction: row;
      align-items: flex-start;
      justify-content: space-between;
    }
  }
}

